@@ -1,1 +1,6 @@
 INCLUDES=$(all_includes) -I$(top_srcdir)/include
+
+AM_CFLAGS = -W -Wall \
+	-Werror \
+	-Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Waggregate-return -Wmissing-declarations -Wredundant-decls -Wnested-externs -Winline -Wstrict-prototypes -Wundef \
+	-Wno-unused-parameter
